<resources>
    <string name="app_name">Lets Course</string>

    <string name="landing_message">Discover All Knowledge You Can Gain!</string>
    <string name="landing_button_login_with_email">Login With Nis</string>
    <string name="landing_new_student">New Student? </string>
    <string name="landing_sigh_up"> Sigh up</string>

    <string name="login_message">See what we can learn today</string>
    <string name="login_button_text">Login</string>
    <string name="login_forget_password">Forget Password? </string>
    <string name="login_please_fill_form">Please fill all form!</string>

    <string name="register_title">Sigh up</string>
    <string name="register_message">Hello, new student</string>
    <string name="register_input_name">FullName</string>
    <string name="register_input_email">Nis</string>
    <string name="register_input_password">Password</string>
    <string name="register_please_fill_form">Please Fill All Form!</string>
    <string name="register_button">Apply</string>

    <string name="home_search_course">Search Courses</string>
    <string name="text_go_search">Go</string>

    <string name="class_search_class">Search Class</string>

    <string name="profile_title">Student Profile</string>
    <string name="profile_completed_course">Completed Course</string>
    <string name="profile_load_more">Load More</string>

    <string name="menu_home">Home</string>
    <string name="menu_class">Class</string>
    <string name="menu_profile">Profile</string>

    <string name="update_profile_title">Update Profile</string>
    <string name="update_profile_message">Update your profile here, whenever you like</string>
    <string name="update_profile_name">Update Name</string>
    <string name="update_profile_email">Update Nis</string>
    <string name="update_profile_password">New Password</string>
    <string name="update_profile_button">Update</string>

    <string name="course_taken">Student Already Has Taken This class</string>
    <string name="got_to_class">Go To Class</string>
    <string name="start_class">Start Class</string>

    <string name="result">Result</string>
    <string name="by">By</string>
    <string name="category">Category</string>
    <string name="enroll">Enroll</string>
    <string name="submit">Submit</string>
    <string name="number">Number</string>
    <string name="open">Open</string>

    <string name="print_cert">Print Certificate</string>
    <string name="open_cert">Open Certificate URL</string>
    <string name="cert_title">Certificate</string>

    <string name="not_found_text">No results found</string>
    <string name="press_to_exit">Press again to exit</string>
    <string name="level">Level</string>
    <string name="min_score">Minimum Score</string>
    <string name="total_material">Total Materials</string>
    <string name="total_exam">Total Exams</string>
    <string name="exam_title">Exam : </string>
    <string name="exam_finish">Exam Finish</string>
    <string name="please_answer_exam">Please Answer All Exam Question Left</string>
    <string name="please_choose_answer">Please Choose Answer</string>
    <string name="quit_exam">Quit Exam</string>
    <string name="quit_exam_message">Are you sure want to quit this exam?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish_exam">Finish My Exam</string>
    <string name="exam_result_title">Exam Result : </string>
    <string name="not_qualified">Sorry, you are not qualified to acquire this certificate</string>
    <string name="please_finish_exam">Finish all exam to acquire this certificate</string>
    <string name="request_cert">Request Certificate</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="finish_to_get_cert">Finish this course exam to get your certificate</string>
    <string name="load_more_material">Load More Materials</string>
    <string name="start_exam">Start Exam</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="search_course">Search Course</string>
    <string name="course_materials">Course Materials</string>
    <string name="course_exam">Course Exam</string>

    <string name="forget_message_1">Try remember where the last you put it</string>
    <string name="forget_message_2">You are very irresponsible</string>
    <string name="forget_message_3">are you getting older already?</string>


    <string-array name="messages_forget_password">
        <item>@string/forget_message_1</item>
        <item>@string/forget_message_2</item>
        <item>@string/forget_message_3</item>
    </string-array>

    <string name="okay">Okay</string>
    <string name="exam_result_detail">Detail Result Exam</string>
    <string name="total_correct_answered_exam">Total Correct Answer : </string>
    <string name="total_exam_answered">Total Exam Answered : </string>

</resources>
