<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/main_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_loading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:visibility="gone">

                    <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_landing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp"
                    tools:visibility="visible">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="60dp"
                        android:fontFamily="@string/medium_font"
                        android:gravity="center"
                        android:textColor="@color/textColorWhite"
                        android:textSize="24sp"
                        android:text="@string/landing_message" />

                    <Button
                        android:id="@+id/open_login_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/colorPrimaryLight"
                        android:fontFamily="@string/medium_font"
                        android:padding="10dp"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorWhite"
                        android:textSize="18sp"
                        android:text="@string/landing_button_login_with_email" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/light_font"
                            android:gravity="center"
                            android:text="@string/landing_new_student"
                            android:textColor="@color/textColorWhite"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/sigh_up_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/medium_font"
                            android:gravity="center"
                            android:text="@string/landing_sigh_up"
                            android:textColor="@color/textColorWhite"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp"
                    tools:visibility="gone">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:fontFamily="@string/medium_font"
                        android:gravity="center"
                        android:text="@string/login_message"
                        android:textColor="@color/textColorWhite"
                        android:textSize="18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/textColorWhite"
                        android:textColorHint="@color/textColorLightGray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:ems="10"
                            android:fontFamily="sans-serif-light"
                            android:hint="Email"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            android:textColor="@color/textColorWhite"
                            android:textColorHint="@color/textColorLightGray" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="30dp"
                        android:textColor="@color/textColorWhite"
                        android:textColorHint="@color/textColorLightGray"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:ems="10"
                            android:fontFamily="sans-serif-light"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:padding="10dp"
                            android:textColor="@color/textColorWhite"
                            android:textColorHint="@color/textColorGray" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/error_login_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@string/medium_font"
                        android:gravity="center"
                        android:shadowColor="@android:color/background_light"
                        android:text="Invalid email or password"
                        android:textColor="@color/colorError"
                        android:textSize="18sp"
                        tools:visibility="gone" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:background="@color/colorPrimaryLight"
                        android:fontFamily="@string/medium_font"
                        android:padding="10dp"
                        android:text="@string/login_button_text"
                        android:textAllCaps="false"
                        android:textColor="@color/textColorWhite"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/forget_password_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@string/light_font"
                        android:gravity="center"
                        android:text="@string/login_forget_password"
                        android:textColor="@color/textColorWhite"
                        android:textSize="18sp" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>